--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
                 <form class="create-new-task-block" id="create-new-task-block">
                     <!-- Titulo-->
                     <div class="row-form">
-                        <label for="TitleTask" class="form-newtask_label" id="task-name">Titulo de Tarea</label>
+                        <label for="TitleTask" class="form-newtask_label" id="task-name" name="task-name">Titulo de Tarea</label>
                         <input type="TitleTask" name="task-name"  class="form-new-task_input" id="task-name" placeholder="Escribe Un titulo para la tarea">
                     </div>
                     <!-- fin titulo-->
@@ -86,8 +86,8 @@
                         <label for="task-name1" class="form-new-task_label">Responsable: </label>
                         <select name="task-description" id="task-description">
                             <option value="">--Selecionar</option>
-                            <option value="User01">Usuario 1</option>
-                            <option value="User02">Usuario 2</option>
+                            <option value="User01">Sebastian Vargas</option>
+                            <option value="User02">Diana Castañeda</option>
                             
                         </select>
                     </div>
